# kombine-bilby

./: CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/kombine_bilby/: __init__.py  sampler.py
tests/: test_bilby_integration.py  test_sampler_class.py
